feat(recommend): support recommend ugc